2008-06-02

	* Build.PL:

	Made version a build requirement

2008-05-23

	* t/*pod*.t:

	Added POD and POD coverage tests

2008-05-19

	* lib/Data/CloudWeights.pm (formation):

	Added limit to size of returned list

	* lib/Data/CloudWeights.pm (formation):

	Added sortable output fields